--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <link rel="shortcut icon" href="vite.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CA-Yashwant</title>
+    <title>YashwantKumar & Associates</title>
   </head>
   <body>
     <div id="root"></div>
